# ccca_ecommerce

./: .gitignore  README.rst  docker-compose.yml  main.py  pyproject.toml  setup.cfg
ccca_ecommerce/: core.py  cupom.py  item.py  pedido.py  pedidoitem.py  validators.py
compose/postgres/: Dockerfile
compose/postgres/psql_scripts/: database.sql
src/: cupom.py  fastapi_adapter.py  fazer_pedido.py  frete.py  item.py  item_repositorio.py  item_repositorio_memoria.py  main.py  obter_itens.py  pedido.py  pedido_repositorio.py  pedido_repositorio_memoria.py
src/aplicacao/: fazer_pedido.py  obter_itens.py  obter_pedido.py  obter_pedidos.py  simulador_de_frete.py  validador_de_cupom.py
src/dominio/entidade/: calculadora_de_frete.py  codigo_do_pedido.py  cupom.py  cupom_do_pedido.py  dimensao.py  frete.py  item.py  item_do_pedido.py  pedido.py  pedido_cupom.py
src/dominio/repositorio/: cupom_repositorio.py  item_repositorio.py  pedido_repositorio.py
src/infra/database/: conexao.py  pg_conexao_adapter.py
src/infra/http/: fastapi_adapter.py  (+1 more)
tests/: test_API.py  test_ccca_ecommerce.py  test_cpf.py  test_cupom.py  test_dimensao.py  test_fazer_pedido.py  test_frete.py  test_obter_itens.py
tests/integracao/: test_API.py  test_fazer_pedido.py  test_item_repositorio_database.py  test_obter_itens.py  test_obter_pedido.py  test_obter_pedidos.py  test_simular_frete.py  test_validar_cupom.py
tests/unidade/: test_codigo_do_pedido.py  test_cpf.py  test_cupom.py  test_dimensao.py  test_frete.py  test_item.py  test_item_do_pedido.py  test_pedido.py  test_pedido_cupom.py
(+5 files in other folders)
